--- a/references.bib
+++ b/references.bib
@@ -32,3 +32,18 @@ vergleichende Untersuchung der Kinetiken von
   year = {2013},
   howpublished = {The Econometrics Academy}
 }
+
+@article{Reiter2020,
+  author    = {Reiter, G. S. and Boeckle, M. and Reiter, C. and Seltenhammer, M. H.},
+  title     = {The impact of total body water on breath alcohol calculations},
+  journal   = {Wiener Klinische Wochenschrift},
+  year      = {2020},
+  volume    = {132},
+  number    = {17-18},
+  pages     = {535--541},
+  month     = sep,
+  doi       = {10.1007/s00508-020-01663-4},
+  pmid      = {32451818},
+  pmcid     = {PMC7518982},
+  note      = {Epub 2020 May 25}
+}
